--- a/test/tests.html
+++ b/test/tests.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="mocha.css" />
     <script src="mocha.js"></script>
     <script src="http://chaijs.com/chai.js" type="text/javascript"></script>
-    <script src="../senseapi.js" type="text/javascript"></script>
+    <script src="senseapi.js" type="text/javascript"></script>
     <script>mocha.setup('bdd')</script>
     <script src="test_senseapi.js"></script>
   </head>
