--- a/test/index.html
+++ b/test/index.html
@@ -1,19 +1,35 @@
 <html>
-  <head>
-    <title>Mocha</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="mocha.css" />
-    <script src="mocha.js"></script>
-    <script src="http://chaijs.com/chai.js" type="text/javascript"></script>
-    <script src="senseapi.js" type="text/javascript"></script>
-    <script>mocha.setup('bdd')</script>
-    <script src="test_senseapi.js"></script>
-  </head>
-  <body>
-    <div id="mocha"></div>
+	<head>
+    	<title>Mocha</title>
+	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	    <link rel="stylesheet" href="mocha.css" />
+	    <script src="mocha.js"></script>
+	    <script src="http://chaijs.com/chai.js" type="text/javascript"></script>
+	    <script src="https://raw.github.com/senseobservationsystems/commonsense-javascript-lib/development/senseapi.js" type="text/javascript"></script>
+	    <script>mocha.setup('bdd')</script>
+	    <script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/md5.js"></script>
+	    <script src="test_senseapi.js"></script>
+    	<script type='text/javascript'>
+    		function submitCredentials() {
+				username = document.getElementById('username').value;
+				password = document.getElementById('password').value;
+    			mocha.run();
+			}
+    	</script>
 
-    <script>
-      mocha.run();
-    </script>
-  </body>
+	</head>
+	<body>
+		<h3>Welcome to the CommonSense Javascript API Lib Testing Suite</h3>
+		<form id='loginForm' action='javascript:submitCredentials();'>
+    		<table>
+    			<tr> 
+    				<td>Username:</td><td><input type='text' id='username'></input></td>
+    				<td>Password:</td><td><input type='password' id='password'></input></td>
+    				<td><input type='submit' value='Submit'></input></td>
+    			</tr>
+    		</table>
+    	</form>
+    	<div id="mocha"></div>
+
+  	</body>
 </html>
