--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,7 @@
 	    <script src="mocha.js"></script>
 	    <script src="http://chaijs.com/chai.js" type="text/javascript"></script>
 	    <script src="https://raw.github.com/senseobservationsystems/commonsense-javascript-lib/development/senseapi.js" type="text/javascript"></script>
+<!-- 	<script src="../../senseapi.js"></script>  -->
 	    <script>mocha.setup('bdd')</script>
 	    <script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/md5.js"></script>
 	    <script src="test_senseapi.js"></script>
